:sparkles: Link ids of menu and navigation graph

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/home_screen">
     <fragment
-        android:id="@+id/homeFragment"
+        android:id="@+id/home_screen"
         android:name="com.leomarkpaway.navigationcomponentandbottomnavigation.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_homeFragment_to_walletFragment"
-            app:destination="@id/walletFragment" />
+            app:destination="@id/wallet_screen" />
     </fragment>
     <fragment
-        android:id="@+id/walletFragment"
+        android:id="@+id/wallet_screen"
         android:name="com.leomarkpaway.navigationcomponentandbottomnavigation.WalletFragment"
         android:label="fragment_wallet"
         tools:layout="@layout/fragment_wallet" >
         <action
             android:id="@+id/action_walletFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/home_screen" />
     </fragment>
 </navigation>
