--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/mHome"
+        android:id="@+id/home_screen"
         android:icon="@drawable/ic_home"
         android:title="Home" />
 
     <item
-        android:id="@+id/mCalendar"
+        android:id="@+id/wallet_screen"
         android:icon="@drawable/ic_wallet"
         android:title="Wallet" />
 
